Menu de cadastro de Livro feito - todo: tratamento de erros

--- a/src/ui/NovoLivro.ui
+++ b/src/ui/NovoLivro.ui
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CadastroProfessor</class>
- <widget class="QDialog" name="CadastroProfessor">
+ <class>CadastroLivro</class>
+ <widget class="QDialog" name="CadastroLivro">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>458</width>
-    <height>306</height>
+    <width>435</width>
+    <height>320</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Cadastro de Professor</string>
+  <property name="font">
+   <font>
+    <weight>50</weight>
+    <bold>false</bold>
+   </font>
   </property>
-  <widget class="QLabel" name="novoProfessorText">
+  <property name="windowTitle">
+   <string>Cadastro de Livro</string>
+  </property>
+  <widget class="QLabel" name="novoLivroText">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -32,14 +38,43 @@
      <bold>true</bold>
     </font>
    </property>
+   <property name="focusPolicy">
+    <enum>Qt::NoFocus</enum>
+   </property>
    <property name="text">
-    <string>Novo Professor</string>
+    <string>Novo Livro</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
    </property>
   </widget>
-  <widget class="QLabel" name="codUsuarioText">
+  <widget class="QLabel" name="tituloText">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>110</y>
+     <width>121</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Título:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="tituloInput">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>130</y>
+     <width>181</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>Ex: Um Curso de Cálculo Vol 1</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="codLivroText">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -49,13 +84,13 @@
     </rect>
    </property>
    <property name="text">
-    <string>Código de usuário:</string>
+    <string>Código do livro:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="codUsuarioInput">
+  <widget class="QLineEdit" name="codLivroInput">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>140</x>
      <y>50</y>
      <width>51</width>
      <height>31</height>
@@ -65,63 +100,40 @@
     <string>Ex: 923</string>
    </property>
   </widget>
-  <widget class="QLabel" name="nomeUsuarioText">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>100</y>
-     <width>121</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Nome Completo:</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="nomeUsuarioInput">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>120</y>
-     <width>181</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="placeholderText">
-    <string>Ex: Danilo Eler</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="anoText">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>100</y>
+     <x>250</x>
+     <y>110</y>
      <width>121</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Titulação:</string>
+    <string>Ano:</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="titulacaoInput">
+  <widget class="QLineEdit" name="anoInput">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>120</y>
-     <width>113</width>
+     <x>250</x>
+     <y>130</y>
+     <width>91</width>
      <height>21</height>
     </rect>
    </property>
+   <property name="text">
+    <string/>
+   </property>
    <property name="placeholderText">
-    <string>Doutor</string>
+    <string>Ex: 2018</string>
    </property>
   </widget>
   <widget class="QPushButton" name="botaoEnviar">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>220</y>
+     <x>270</x>
+     <y>200</y>
      <width>113</width>
      <height>32</height>
     </rect>
