--- a/src/ui/NovoAluno.ui
+++ b/src/ui/NovoAluno.ui
@@ -28,6 +28,8 @@
    <property name="font">
     <font>
      <pointsize>18</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
