--- a/src/ui/interface.ui
+++ b/src/ui/interface.ui
@@ -32,6 +32,8 @@
     <property name="font">
      <font>
       <pointsize>18</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="text">
@@ -64,6 +66,9 @@
     </property>
     <property name="sizeAdjustPolicy">
      <enum>QAbstractScrollArea::AdjustIgnored</enum>
+    </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
@@ -257,6 +262,7 @@
     <addaction name="separator"/>
     <addaction name="actionLivros_disponiveis"/>
     <addaction name="actionLivros_emprestados"/>
+    <addaction name="actionLivros_com_atraso"/>
     <addaction name="separator"/>
     <addaction name="actionHistorico_de_usuario"/>
     <addaction name="actionEmprestimos_de_um_usuario"/>
@@ -363,6 +369,11 @@
   <action name="actionUsuarios_com_atrasos">
    <property name="text">
     <string>Usuarios com atrasos</string>
+   </property>
+  </action>
+  <action name="actionLivros_com_atraso">
+   <property name="text">
+    <string>Livros com atraso</string>
    </property>
   </action>
  </widget>
