--- a/src/ui/RelatorioAlunos.ui
+++ b/src/ui/RelatorioAlunos.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>359</height>
+    <width>565</width>
+    <height>400</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="BigText">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>40</y>
+     <x>30</x>
+     <y>20</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -38,9 +38,21 @@
     <rect>
      <x>40</x>
      <y>80</y>
-     <width>401</width>
-     <height>231</height>
+     <width>501</width>
+     <height>281</height>
     </rect>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="sizeAdjustPolicy">
+    <enum>QAbstractScrollArea::AdjustToContents</enum>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
    </property>
    <property name="dragEnabled">
     <bool>false</bool>
@@ -49,7 +61,7 @@
     <bool>false</bool>
    </attribute>
    <attribute name="horizontalHeaderStretchLastSection">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <column>
     <property name="text">
