--- a/src/ui/RelatorioLivros.ui
+++ b/src/ui/RelatorioLivros.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>565</width>
-    <height>341</height>
+    <width>568</width>
+    <height>402</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,11 +36,26 @@
   <widget class="QTableWidget" name="tabelaRelatorio">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>40</x>
      <y>70</y>
      <width>501</width>
-     <height>241</height>
+     <height>291</height>
     </rect>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="sizeAdjustPolicy">
+    <enum>QAbstractScrollArea::AdjustToContents</enum>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
    </property>
    <property name="dragEnabled">
     <bool>false</bool>
@@ -49,7 +64,7 @@
     <bool>false</bool>
    </attribute>
    <attribute name="horizontalHeaderStretchLastSection">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <column>
     <property name="text">
