--- a/src/ui/RelatorioUsuarios.ui
+++ b/src/ui/RelatorioUsuarios.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>505</width>
-    <height>350</height>
+    <width>568</width>
+    <height>404</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,18 +38,36 @@
     <rect>
      <x>50</x>
      <y>70</y>
-     <width>401</width>
-     <height>231</height>
+     <width>471</width>
+     <height>281</height>
     </rect>
+   </property>
+   <property name="mouseTracking">
+    <bool>false</bool>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOn</enum>
+   </property>
+   <property name="sizeAdjustPolicy">
+    <enum>QAbstractScrollArea::AdjustToContents</enum>
+   </property>
+   <property name="editTriggers">
+    <set>QAbstractItemView::NoEditTriggers</set>
    </property>
    <property name="dragEnabled">
     <bool>false</bool>
+   </property>
+   <property name="alternatingRowColors">
+    <bool>true</bool>
    </property>
    <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
     <bool>false</bool>
    </attribute>
    <attribute name="horizontalHeaderStretchLastSection">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <column>
     <property name="text">
